Implemented dynamic applications for the navigation bar

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
-    <title>Landing Page</title>
+    <title>Song Comparison Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
