--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
-    <title>Landing Page</title>
+    <title>Artist Comparison Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -16,13 +16,13 @@
     <div id = "navigation bar">
         <nav>
             <ul>
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "artist.html">Artist</a></li>
-              <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-              <li><a href = "song.html">Songs</a></li>
-              <li><a href = "song_comparison.html">Compare Songs</a></li>
-              <li><a href = "developers.html">Developers</a></li>
-              <li><a href = "#">User</a></li>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "artist.html">Artist</a></li>
+                <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
+                <li><a href = "song.html">Songs</a></li>
+                <li><a href = "song_comparison.html">Compare Songs</a></li>
+                <li><a href = "developers.html">Developers</a></li>
+                <li><a href = "#">User</a></li>
             </ul>
         </nav>
     </div>
