--- a/public/index.html
+++ b/public/index.html
@@ -8,37 +8,34 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
-  <header>
-    <div id = "title">
-        <h1 id = "Title">Comparify</h1>
-    </div>
-    <div id = "navigation bar">
+  <body>
+    <header>
+      <div id = "navigation">
         <nav>
-            <ul>
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "artist.html">Artist</a></li>
-              <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-              <li><a href = "song.html">Songs</a></li>
-              <li><a href = "song_comparison.html">Compare Songs</a></li>
-              <li><a href = "developers.html">Developers</a></li>
-              <li><a href = "#">User</a></li>
+          <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "artist.html">Artist</a></li>
+            <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
+            <li><a href = "song.html">Songs</a></li>
+            <li><a href = "song_comparison.html">Compare Songs</a></li>
+            <li><a href = "developers.html">Developers</a></li>
+            <li><a href = "#">User</a></li>
             </ul>
         </nav>
+      </div>
+    </header>
+    <div id = "container">
+      <div id = "content">
+        <h1> Data Visualization </h1>
+        <h3> Our Goal </h3>
+        <p> The purpose of our goal is to take aggregated data from a various artists and songs, and
+          visualize it in a way that users can clearly see.
+        </p>
+      </div>
     </div>
-  <header>
-  <div id = "container">
-
-    <div id = "content">
+    <div id = "footer">
 
     </div>
-
-  </div>
-  <div id = "footer">
-
-  </div>
-
-  <body>
-	<script src="index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
