--- a/public/artist.html
+++ b/public/artist.html
@@ -25,8 +25,22 @@
       </div>
     </header>
     <div id = "container">
-      <div id = "content">
-      </div>
+      <h3 id = "artist-name" style = "text-align: center;"> The 1975 </h3>
+      <img id = "artist-image" src="/images/example-1975.jpeg" alt="artist-picture" class = "center">
+      <p class = "center"> Artists: Matty Healy, Ross MacDonald, George Daniel, Adam Hann</p>
+      <p class = "center"> Music Type: Alternative Pop</p>
+      <p class = "center"> From: Wilmslow, United Kingdom</p>
+      <p class = "center"> Popularity index: 85</p>
+      <p class = "artist-description" style = "text-align: center;"> The 1975 is a British pop rock band known for their unique and genre-blending sound. 
+        Formed in 2002, the original members included Matthew Healy, Adam Hann, George Daniel, and Ross MacDonald. 
+        They gained prominence with their self-titled debut album in 2013, featuring hit singles like "Sex" and "Chocolate." 
+        The band's music defies easy categorization, drawing from pop, rock, electronic, and R&B influences.
+        In subsequent years, The 1975 released several albums, including "I Like It When You Sleep, for You Are So Beautiful yet 
+        So Unaware of It" in 2016 and "A Brief Inquiry into Online Relationships" in 2018. Their music explores themes of modern life, 
+        technology, and relationships. Beyond their music, the band is known for visually captivating music videos and thought-provoking 
+        lyrics, earning them critical acclaim and a dedicated fan base.
+      </p>
+
     </div>
     <div id = "footer">
     </div>
