Created table data

--- a/public/artist.html
+++ b/public/artist.html
@@ -41,6 +41,39 @@
         lyrics, earning them critical acclaim and a dedicated fan base.
       </p>
 
+      <h1>Artist Top 10 Song Statistics</h1>
+      <div class="simple-bar-chart">
+        <div class="item" style="--clr: #5EB344; --val: 80">
+        <div class="label">Danceability</div>
+        <div class="value">80%</div>
+      </div>
+  
+      <div class="item" style="--clr: #FCB72A; --val: 50">
+        <div class="label">Frequency</div>
+        <div class="value">50%</div>
+      </div>
+  
+      <div class="item" style="--clr: #F8821A; --val: 65">
+        <div class="label">Tempo</div>
+        <div class="value">65%</div>
+      </div>
+  
+      <div class="item" style="--clr: #E0393E; --val: 15">
+        <div class="label">Valence</div>
+        <div class="value">15%</div>
+      </div>
+  
+      <div class="item" style="--clr: #963D97; --val: 20">
+        <div class="label">Energy</div>
+        <div class="value">20%</div>
+      </div>
+  
+      <div class="item" style="--clr: #069CDB; --val: 85">
+        <div class="label">Accousticness</div>
+        <div class="value">85%</div>
+      </div>
+  </div>
+
     </div>
     <div id = "footer">
     </div>
