--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -25,7 +25,40 @@
       </div>
     </header>
     <div id = "container">
-      <div id = "content">
+      <div class="row">
+        <div class="column">
+          <h2 class = "centered"> Kanye West </h2>
+          <img class = "centered" id = "artist-image" src="/images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
+          height: 150px; object-fit: cover; object-position: 25% 25%;">
+          <p class = "centered"> Artist(s): Kanye</p>
+          <p class = "centered"> Music Type: Rap / Pop </p>
+          <p class = "centered"> From: Atlanta, Georgia</p>
+          <p class = "centered"> Popularity index: 95</p>
+          <p class = "centered"> Kanye West, born in Atlanta in 1977, is a renowned American rapper, 
+          producer, and fashion designer. He gained fame for his groundbreaking albums like "The College Dropout" and "My Beautiful Dark Twisted Fantasy," 
+          which pushed the boundaries of hip-hop and won critical acclaim. Beyond music, Kanye has ventured into fashion with his Yeezy brand, 
+          collaborating with major labels and creating his own line. He is known for his outspoken personality, often making headlines for his candid and 
+          controversial statements.
+        </p>
+        </div>
+        <div class="column">
+          <h2 class = "centered"> Drake </h2>
+          <img class = "centered" id = "artist-image" src="/images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
+          height: 150px; object-fit: cover; object-position: 25% 25%;">
+          <p class = "centered"> Artist(s): Drake</p>
+          <p class = "centered"> Music Type: Rap / Pop </p>
+          <p class = "centered"> From: Toronto, Canda</p>
+          <p class = "centered"> Popularity index: 99</p>
+          <p class = "centered"> 
+            Drake, born Aubrey Drake Graham in 1986, is a Canadian rapper, singer, songwriter, and actor. 
+            He first gained recognition through his role on the television series "Degrassi: The Next Generation" and 
+            then transitioned into a successful music career. Drake is known for his versatile style, blending hip-hop, R&B, 
+            and pop influences, and he has released numerous chart-topping albums like "Views," "Take Care," and "Scorpion." 
+            His signature emotional and introspective lyrics have resonated with a global audience, 
+            making him one of the most commercially successful and critically acclaimed artists in contemporary music. 
+            In addition to his music, Drake is also a savvy entrepreneur and has made significant contributions to the world of fashion and business.
+          </p>
+        </div>
       </div>
     </div>
     <div id = "footer">
