Added Details to Landing Page

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,22 @@
         </nav>
       </div>
     </header>
+
+
     <div id = "container">
       <div id = "content">
-      </div>
+      <h2>VIsualization of the means of Comparify's Database</h2>
+      <div style="width: 500px; height: 500px; border 1px solid black; background-color: green  ;"></div>
+      <p>Click here for the documentaion of our site journey</p>
+        <p><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
+      <!-- 
+          temporary message and a link to our documentation will be added once finished with this code below:
+            <form action="url" method="get" target="_blank">
+              <button type="submit">Click Me</button>
+            </form>
+      -->
+
+    </div>
     </div>
     <div id = "footer">
     </div>
