--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -17,14 +17,14 @@
         <nav>
             <ul>
               <li><a href = "index.html">Home</a></li>
-              <li><a href = "artist.html">Artist</a></li>
+              <li><a href = "artist.html">Artissst</a></li>
               <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
               <li><a href = "song.html">Songs</a></li>
               <li><a href = "song_comparison.html">Compare Songs</a></li>
               <li><a href = "developers.html">Developers</a></li>
               <li><a href = "#">User</a></li>
             </ul>
-        </nav>
+        </nav>git config --list
     </div>
   <header>
   <div id = "container">
