Fleshed out developors page, included alt text for placeholders for now. Just need images of y'all to put in.

--- a/public/developers.html
+++ b/public/developers.html
@@ -1,44 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
     <title>Developers</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+</head>
+<body>
 
-  <header>
-    <div id = "title">
-        <h1 id = "Title">Comparify</h1>
+<header>
+    <div id="title">
+        <h1 id="Title">Comparify</h1>
     </div>
-    <div id = "navigation bar">
+    <div id="navigation-bar"> <!-- Changed the ID name to remove space -->
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "artist.html">Artist</a></li>
-                <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-                <li><a href = "song.html">Songs</a></li>
-                <li><a href = "song_comparison.html">Compare Songs</a></li>
-                <li><a href = "developers.html">Developers</a></li>
-                <li><a href = "#">User</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="artist.html">Artist</a></li>
+                <li><a href="artists_comparison.html">Artist Comparison</a></li>
+                <li><a href="song.html">Songs</a></li>
+                <li><a href="song_comparison.html">Compare Songs</a></li>
+                <li><a href="developers.html">Developers</a></li>
+                <li><a href="#">User</a></li>
             </ul>
         </nav>
     </div>
-  <header>
-  <div id = "container">
+</header>
 
-    <div id = "content">
+<div id="container">
 
+    <div id="content">
+        <h2>Meet the Developers</h2>
+
+        <div class="developer">
+            <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
+            <p>Joe's bio goes here...</p>
+        </div>
+
+        <div class="developer">
+            <img src="gabe-image.jpg" alt="Gabe's Image">
+            <p>Gabe's bio goes here...</p>
+        </div>
+
+        <div class="developer">
+            <img src="simon-image.jpg" alt="Simon's Image">
+            <p>Simon's bio goes here...</p>
+        </div>
+
+        <div class="developer">
+            <img src="hilary-image.jpg" alt="Hilary's Image">
+            <p>Hilary's bio goes here...</p>
+        </div>
     </div>
 
-  </div>
-  <div id = "footer">
+    <div id="footer">
+        <!-- You can add footer content here -->
+    </div>
 
-  </div>
+</div>
 
-  <body>
-	<script src="index.js"></script>
-  </body>
+<script src="index.js"></script>
+
+</body>
 </html>
