--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -26,6 +26,37 @@
             </ul>
         </nav>
     </div>
+ <body style="background-color:white;">
+
+<h2 align = "center">Song Comparison</h2>
+<p align = "center">"Welcome to our Song Comparison Page, your gateway to the diverse universe of music. Whether you're hunting for the ideal anthem to match your mood, digging for lyrical gems, or exploring the nuances of your favorite tunes, this is the place to be. Join us as we dissect, contrast, and appreciate the melodies that soundtrack our lives. From iconic classics to contemporary hits, we've got you covered on your musical journey!"</p>
+
+<div class="dropdown" style="float:left;">
+  <button class="dropbtn">Insert Song 1</button>
+  <div class="dropdown-content" style="left:0;">
+    <a href="#">Danceability</a>
+    <a href="#">Energy</a>
+    <a href="#">Tempo</a>
+    <a href="#">Loudness</a>
+    <a href="#">Instrumentalness</a>
+    <a href="#">Speechiness</a>
+  </div>
+</div>
+
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn">Insert Song 2</button>
+  <div class="dropdown-content">
+    <a href="#">Danceability</a>
+    <a href="#">Energy</a>
+    <a href="#">Tempo</a>
+    <a href="#">Loudness</a>
+    <a href="#">Instrumentalness</a>
+    <a href="#">Speechiness</a>
+  </div>
+</div>
+
+</body>
+
   <header>
   <div id = "container">
 
@@ -41,4 +72,48 @@
   <body>
 	<script src="index.js"></script>
   </body>
-</html>
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
+</style>
+
+
+</head>
+<body style="background-color:white;">
