fixed formatting, fixed artist comparison, song comparison, developers, and song page formats

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -8,72 +8,55 @@
     <title>Song Comparison Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
-  <header>
-    <div id = "title">
-        <h1 id = "Title">Comparify</h1>
-    </div>
-    <div id = "navigation bar">
-        <nav>
-            <ul>
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "artist.html">Artissst</a></li>
-              <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-              <li><a href = "song.html">Songs</a></li>
-              <li><a href = "song_comparison.html">Compare Songs</a></li>
-              <li><a href = "developers.html">Developers</a></li>
-              <li><a href = "#">User</a></li>
-            </ul>
-        </nav>git config --list
-    </div>
- <body style="background-color:white;">
-
-<h2 align = "center">Song Comparison</h2>
-<p align = "center">"Welcome to our Song Comparison Page, your gateway to the diverse universe of music. Whether you're hunting for the ideal anthem to match your mood, digging for lyrical gems, or exploring the nuances of your favorite tunes, this is the place to be. Join us as we dissect, contrast, and appreciate the melodies that soundtrack our lives. From iconic classics to contemporary hits, we've got you covered on your musical journey!"</p>
-
-<div class="dropdown" style="float:left;">
-  <button class="dropbtn">Insert Song 1</button>
-  <div class="dropdown-content" style="left:0;">
-    <a href="#">Danceability</a>
-    <a href="#">Energy</a>
-    <a href="#">Tempo</a>
-    <a href="#">Loudness</a>
-    <a href="#">Instrumentalness</a>
-    <a href="#">Speechiness</a>
-  </div>
-</div>
-
-<div class="dropdown" style="float:right;">
-  <button class="dropbtn">Insert Song 2</button>
-  <div class="dropdown-content">
-    <a href="#">Danceability</a>
-    <a href="#">Energy</a>
-    <a href="#">Tempo</a>
-    <a href="#">Loudness</a>
-    <a href="#">Instrumentalness</a>
-    <a href="#">Speechiness</a>
-  </div>
-</div>
-
-</body>
-
-  <header>
-  <div id = "container">
-
-    <div id = "content">
-
-    </div>
-
-  </div>
-  <div id = "footer">
-
-  </div>
-
   <body>
-	<script src="index.js"></script>
-  </body>
+    <header>
+      <div id = "navigation">
+        <nav>
+          <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "artist.html">Artist</a></li>
+            <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
+            <li><a href = "song.html">Songs</a></li>
+            <li><a href = "song_comparison.html">Compare Songs</a></li>
+            <li><a href = "developers.html">Developers</a></li>
+            <li><a href = "#">User</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div id = "container">
+      <h2 style="text-align: center;">Song Comparison</h2>
+      <p style="text-align: center;">"Welcome to our Song Comparison Page, your gateway to the diverse universe of music. Whether you're hunting for the ideal anthem to match your mood, digging for lyrical gems, or exploring the nuances of your favorite tunes, this is the place to be. Join us as we dissect, contrast, and appreciate the melodies that soundtrack our lives. From iconic classics to contemporary hits, we've got you covered on your musical journey!"</p>
 
-<head>
+      <div class="dropdown" style="float:left;">
+        <button class="dropbtn">Insert Song 1</button>
+        <div class="dropdown-content" style="left:0;">
+          <a href="#">Danceability</a>
+          <a href="#">Energy</a>
+          <a href="#">Tempo</a>
+          <a href="#">Loudness</a>
+          <a href="#">Instrumentalness</a>
+          <a href="#">Speechiness</a>
+        </div>
+      </div>
+      <div class="dropdown" style="float:right;">
+        <button class="dropbtn">Insert Song 2</button>
+        <div class="dropdown-content">
+          <a href="#">Danceability</a>
+          <a href="#">Energy</a>
+          <a href="#">Tempo</a>
+          <a href="#">Loudness</a>
+          <a href="#">Instrumentalness</a>
+          <a href="#">Speechiness</a>
+        </div>
+      </div>
+    </div>
+    <div id = "footer">
+      
+    </div>
+  </body>
+	<script src="index.js"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .dropbtn {
