--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -27,29 +27,30 @@
     <div id = "container">
       <div class="row">
         <div class="column">
-          <h2 class = "centered"> Kanye West </h2>
-          <img class = "centered" id = "artist-image" src="/images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
+          <h2 class = "centered_text"> Kanye West </h2>
+          <img class = "center img" id = "artist-image" src="/images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered"> Artist(s): Kanye</p>
-          <p class = "centered"> Music Type: Rap / Pop </p>
-          <p class = "centered"> From: Atlanta, Georgia</p>
-          <p class = "centered"> Popularity index: 95</p>
-          <p class = "centered"> Kanye West, born in Atlanta in 1977, is a renowned American rapper, 
+          <p class = "centered_text"> Artist(s): Kanye</p>
+          <p class = "centered_text"> Music Type: Rap / Pop </p>
+          <p class = "centered_text"> From: Atlanta, Georgia</p>
+          <p class = "centered_text"> Popularity index: 95</p>
+          <p class = "centered_text" id = "artist description"> Kanye West, born in Atlanta in 1977, is a renowned American rapper, 
           producer, and fashion designer. He gained fame for his groundbreaking albums like "The College Dropout" and "My Beautiful Dark Twisted Fantasy," 
           which pushed the boundaries of hip-hop and won critical acclaim. Beyond music, Kanye has ventured into fashion with his Yeezy brand, 
           collaborating with major labels and creating his own line. He is known for his outspoken personality, often making headlines for his candid and 
-          controversial statements.
+          controversial statements. Some of his most notable songs includes Flashing Lights (Graduation), Runaway (My Beautiful Dark Twisted Fantasy), and 
+          Heartless (808s & Heartbreaks)
         </p>
-        </div>
+      </div>
         <div class="column">
-          <h2 class = "centered"> Drake </h2>
-          <img class = "centered" id = "artist-image" src="/images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
+          <h2 class = "centered_text"> Drake </h2>
+          <img class = "center img" id = "artist-image" src="/images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered"> Artist(s): Drake</p>
-          <p class = "centered"> Music Type: Rap / Pop </p>
-          <p class = "centered"> From: Toronto, Canda</p>
-          <p class = "centered"> Popularity index: 99</p>
-          <p class = "centered"> 
+          <p class = "centered_text"> Artist(s): Drake</p>
+          <p class = "centered_text"> Music Type: Rap / Pop </p>
+          <p class = "centered_text"> From: Toronto, Canda</p>
+          <p class = "centered_text"> Popularity index: 99</p>
+          <p class = "centered_text" id = "artist description"> 
             Drake, born Aubrey Drake Graham in 1986, is a Canadian rapper, singer, songwriter, and actor. 
             He first gained recognition through his role on the television series "Degrassi: The Next Generation" and 
             then transitioned into a successful music career. Drake is known for his versatile style, blending hip-hop, R&B, 
@@ -59,7 +60,6 @@
             In addition to his music, Drake is also a savvy entrepreneur and has made significant contributions to the world of fashion and business.
           </p>
         </div>
-      </div>
     </div>
     <div id = "footer">
     </div>
