--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 
     <div id = "container">
       <div id = "content">
-      <h2>VIsualization of the means of Comparify's Database</h2>
-      <div style="width: 500px; height: 500px; border 1px solid black; background-color: green  ;"></div>
+      <h2>Visualization of the means of Comparify's Database</h2>
+      <div style="width: 500px; height: 500px; border: 1px solid black; background-color: green  ;"></div>
       <p>Click here for the documentaion of our site journey</p>
         <p><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
       <!-- 
@@ -37,8 +37,7 @@
             <form action="url" method="get" target="_blank">
               <button type="submit">Click Me</button>
             </form>
-      -->
-
+      --> 
     </div>
     </div>
     <div id = "footer">
