--- a/public/artist.html
+++ b/public/artist.html
@@ -26,7 +26,7 @@
     </header>
     <div id = "container">
       <h2 id = "artist-name" style = "text-align: center;"> The 1975 </h2>
-      <img id = "artist-image" src="/images/example-1975.jpeg" alt="artist-picture" class = "center">
+      <img id = "artist-image" src="/images/example-1975.jpeg" alt="artist-picture" class = "center img">
       <p class = "center"> Artists: Matty Healy, Ross MacDonald, George Daniel, Adam Hann</p>
       <p class = "center"> Music Type: Alternative Pop</p>
       <p class = "center"> From: Wilmslow, United Kingdom</p>
