--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -56,8 +56,4 @@
     </div>
   </body>
 	<script src="index.js"></script>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-<body style="background-color:white;">
+</html>
