Created 2 columns and data fields for song comparison

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -50,6 +50,24 @@
           <a href="#">Speechiness</a>
         </div>
       </div>
+      <div class = "row">
+        <div class = "column">
+          <h2 class = "centered_text"> Nights</h2>
+          <p class = "centered_text" id = "artist_name">Artist: Frank Ocean</p>
+          <p class = "centered_text" id = "ablum_type">Album: Blonde</p>
+          <p class = "centered_text" id = "views">Views: 1000000</p>
+          <a href = "https://open.spotify.com/track/7eqoqGkKwgOaWNNHx90uEZ?si=7ab66c3d30434be3" class = "centered_text" 
+            id = "url_link"><p class = "centered_text">Song Link</p></a>
+        </div>
+        <div class = "column">
+          <h2 class = "centered_text"> Bed Peace</h2>
+          <p class = "centered_text" id = "artist_name">Artist: Jhene Aiko</p>
+          <p class = "centered_text" id = "ablum_type">Album: Sail Out</p>
+          <p class = "centered_text" id = "views">Views: 1000000</p>
+          <a class = "centered_text" href = "https://open.spotify.com/track/5Ck3e6z1bcSCes5gdo0Ddt?si=4a558f1e15b14b7d" 
+            id = "url_link"><p class = "centered_text">Song Link</p></a>
+        </div>
+      </div>
     </div>
     <div id = "footer">
       
