image installation for song comparison

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -53,6 +53,8 @@
       <div class = "row">
         <div class = "column">
           <h2 class = "centered_text"> Nights</h2>
+          <img class = "center img" id = "artist-image" src="/images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
+          height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p class = "centered_text" id = "artist_name">Artist: Frank Ocean</p>
           <p class = "centered_text" id = "ablum_type">Album: Blonde</p>
           <p class = "centered_text" id = "views">Views: 1000000</p>
@@ -61,6 +63,8 @@
         </div>
         <div class = "column">
           <h2 class = "centered_text"> Bed Peace</h2>
+          <img class = "center img" id = "artist-image" src="/images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
+          height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p class = "centered_text" id = "artist_name">Artist: Jhene Aiko</p>
           <p class = "centered_text" id = "ablum_type">Album: Sail Out</p>
           <p class = "centered_text" id = "views">Views: 1000000</p>
@@ -70,7 +74,6 @@
       </div>
     </div>
     <div id = "footer">
-      
     </div>
   </body>
 	<script src="index.js"></script>
