Added a placeholder song image and basic html containers for song values

--- a/public/song.html
+++ b/public/song.html
@@ -23,9 +23,42 @@
             </ul>
         </nav>
     </div>
-  <header>
+  </header>
   <div id = "container">
+    <section>
+      <h2 id = "song-name" style = "text-align: center;"> Surround Sound </h2>
+      <img id = "song-image" src="/images/JIDalbum.png" alt="song-picture" class = "center img">
+      <p class = "center"> Artists: JID, 21 Savage, Baby Tate</p>
+      <p class = "center"> Music Type: Rap</p>
+      <p class = "left"> Danceability: 55%</p>
+      <p class = "left"> Energy: 65%</p>
+      <p class = "left"> Speechiness: 75%</p>
+      <p class = "left"> Acousticness: 75%</p>
+      <p class = "left"> Instrumentalness: 60%</p>
+      <p class = "left"> Liveness: 60%</p>
+      <p class = "left"> Valence: 60%</p>
 
+      <article>
+        <table>
+          <tr>
+            <td>Tempo</td>
+            <td>
+              <div style='background-color:green; width:500'>
+                140 bpm
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Loudness</td>
+            <td>
+              <div style='background-color:Yellow; width:1000'>
+                50 Dbs
+              </div>
+            </td>
+          </tr>
+        </table>
+      </article>
+    </section> 
   </div>
   <div id = "footer">
 
