Added Album section to song page

--- a/public/song.html
+++ b/public/song.html
@@ -29,6 +29,7 @@
       <h2 id = "song-name" style = "text-align: center;"> Surround Sound </h2>
       <img id = "song-image" src="/images/JIDalbum.png" alt="song-picture" class = "center img">
       <p class = "center"> Artists: JID, 21 Savage, Baby Tate</p>
+      <p class = "center"> Album: The Forever Story</p>
       <p class = "center"> Music Type: Rap</p>
       <p class = "left"> Danceability: 55%</p>
       <p class = "left"> Energy: 65%</p>
