--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,37 @@
     <div id = "container">
       <div id = "content">
       <h2>Visualization of the means of Comparify's Database</h2>
-      <div style="width: 500px; height: 500px; border: 1px solid black; background-color: green  ;"></div>
+      <div style="width: 500px; height: 400px; border: 1px solid black; background-color: green  ;">
+        <div class="simple-bar-chart">
+          <div class="item" style="--clr: #5EB344; --val: 80">
+          <div class="label">Danceability</div>
+          <div class="value">80%</div>
+        </div>
+        <div class="item" style="--clr: #8e57ad; --val: 50">
+          <div class="label">Energy</div>
+          <div class="value">50%</div>
+        </div>
+        <div class="item" style="--clr: #2afcd9; --val: 50">
+          <div class="label">Speechiness</div>
+          <div class="value">50%</div>
+        </div>
+        <div class="item" style="--clr: #e487369c; --val: 65">
+          <div class="label">Acousticness</div>
+          <div class="value">65%</div>
+        </div>
+        <div class="item" style="--clr: #be9e0c; --val: 65">
+          <div class="label">Instrumentalness</div>
+          <div class="value">65%</div>
+        </div>
+        <div class="item" style="--clr: #f8ed58; --val: 65">
+          <div class="label">Liveness</div>
+          <div class="value">65%</div>
+        </div>
+        <div class="item" style="--clr: #bd537f; --val: 15">
+          <div class="label">Valence</div>
+          <div class="value">15%</div>
+        </div>
+      </div>
       <p>Click here for the documentaion of our site journey</p>
         <p><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
       <!-- 
