--- a/public/index.html
+++ b/public/index.html
@@ -24,53 +24,48 @@
         </nav>
       </div>
     </header>
-
-
     <div id = "container">
-      <div id = "content">
-      <h2>Visualization of the means of Comparify's Database</h2>
-      <div style="width: 500px; height: 400px; border: 1px solid black; background-color: green  ;">
-        <div class="simple-bar-chart">
-          <div class="item" style="--clr: #5EB344; --val: 80">
-          <div class="label">Danceability</div>
-          <div class="value">80%</div>
-        </div>
-        <div class="item" style="--clr: #8e57ad; --val: 50">
-          <div class="label">Energy</div>
-          <div class="value">50%</div>
-        </div>
-        <div class="item" style="--clr: #2afcd9; --val: 50">
-          <div class="label">Speechiness</div>
-          <div class="value">50%</div>
-        </div>
-        <div class="item" style="--clr: #e487369c; --val: 65">
-          <div class="label">Acousticness</div>
-          <div class="value">65%</div>
-        </div>
-        <div class="item" style="--clr: #be9e0c; --val: 65">
-          <div class="label">Instrumentalness</div>
-          <div class="value">65%</div>
-        </div>
-        <div class="item" style="--clr: #f8ed58; --val: 65">
-          <div class="label">Liveness</div>
-          <div class="value">65%</div>
-        </div>
-        <div class="item" style="--clr: #bd537f; --val: 15">
-          <div class="label">Valence</div>
-          <div class="value">15%</div>
-        </div>
+      <h2 class = "centered_text">Visualization of the means of Comparify's Database</h2>
+      <div class="simple-bar-chart">
+        <div class="item" style="--clr: #5EB344; --val: 80">
+        <div class="label">Danceability</div>
+        <div class="value">80%</div>
       </div>
-      <p>Click here for the documentaion of our site journey</p>
-        <p><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
-      <!-- 
-          temporary message and a link to our documentation will be added once finished with this code below:
-            <form action="url" method="get" target="_blank">
-              <button type="submit">Click Me</button>
-            </form>
-      --> 
-    </div>
+
+      <div class="item" style="--clr: #FCB72A; --val: 50">
+        <div class="label">Frequency</div>
+        <div class="value">50%</div>
+      </div>
+
+      <div class="item" style="--clr: #F8821A; --val: 65">
+        <div class="label">Tempo</div>
+        <div class="value">65%</div>
+      </div>
+
+      <div class="item" style="--clr: #E0393E; --val: 15">
+        <div class="label">Valence</div>
+        <div class="value">15%</div>
+      </div>
+  
+      <div class="item" style="--clr: #963D97; --val: 20">
+        <div class="label">Energy</div>
+        <div class="value">20%</div>
+      </div>
+  
+      <div class="item" style="--clr: #069CDB; --val: 85">
+        <div class="label">Accousticness</div>
+        <div class="value">85%</div>
+      </div>
     </div>
     <div id = "footer">
+      <p class = "centered_text">Click here for the documentaion of our site journey</p>
+      <p class = "centered_text"><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
+      <!-- 
+        temporary message and a link to our documentation will be added once finished with this code below:
+        <form action="url" method="get" target="_blank">
+        <button type="submit">Click Me</button>
+        </form>
+      --> 
     </div>
     <script src="index.js"></script>
   </body>
