--- a/public/song.html
+++ b/public/song.html
@@ -8,64 +8,65 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
-  <header>
-    <div id = "navigation bar">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "artist.html">Artist</a></li>
-                <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-                <li><a href = "song.html">Songs</a></li>
-                <li><a href = "song_comparison.html">Compare Songs</a></li>
-                <li><a href = "developers.html">Developers</a></li>
-                <li><a href = "#">User</a></li>
-            </ul>
-        </nav>
-    </div>
-  </header>
-  <div id = "container">
-    <section>
-      <h2 id = "song-name" style = "text-align: center;"> Surround Sound </h2>
-      <img id = "song-image" src="/images/JIDalbum.png" alt="song-picture" class = "center img">
-      <p class = "center"> Artists: JID, 21 Savage, Baby Tate</p>
-      <p class = "center"> Album: The Forever Story</p>
-      <p class = "center"> Music Type: Rap</p>
-      <p class = "left"> Danceability: 55%</p>
-      <p class = "left"> Energy: 65%</p>
-      <p class = "left"> Speechiness: 75%</p>
-      <p class = "left"> Acousticness: 75%</p>
-      <p class = "left"> Instrumentalness: 60%</p>
-      <p class = "left"> Liveness: 60%</p>
-      <p class = "left"> Valence: 60%</p>
-
-      <article>
-        <table>
-          <tr>
-            <td>Tempo</td>
-            <td>
-              <div style='background-color:green; width:500'>
-                140 bpm
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Loudness</td>
-            <td>
-              <div style='background-color:Yellow; width:1000'>
-                50 Dbs
-              </div>
-            </td>
-          </tr>
-        </table>
-      </article>
-    </section> 
-  </div>
-  <div id = "footer">
-
-  </div>
-
   <body>
-	<script src="index.js"></script>
+    <header>
+      <div id = "navigation bar">
+        <nav>
+          <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "artist.html">Artist</a></li>
+            <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
+            <li><a href = "song.html">Songs</a></li>
+            <li><a href = "song_comparison.html">Compare Songs</a></li>
+            <li><a href = "developers.html">Developers</a></li>
+            <li><a href = "#">User</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div id = "container">
+      <section>
+        <h2 id = "song-name" style = "text-align: center;"> Surround Sound </h2>
+        <img id = "song-image" src="/images/JIDalbum.png" alt="song-picture" class = "center img">
+        <p class = "centered_text"> Artists: JID, 21 Savage, Baby Tate</p>
+        <p class = "centered_text"> Album: The Forever Story</p>
+        <p class = "centered_text"> Music Type: Rap</p>
+        <p class = "centered_text"> Danceability: 55%</p>
+        <p class = "centered_text"> Energy: 65%</p>
+        <p class = "centered_text"> Speechiness: 75%</p>
+        <p class = "centered_text"> Acousticness: 75%</p>
+        <p class = "centered_text"> Instrumentalness: 60%</p>
+        <p class = "centered_text"> Liveness: 60%</p>
+        <p class = "centered_text"> Valence: 60%</p>
+
+        <article>
+          <table>
+            <tr>
+              <td>Tempo</td>
+              <td>
+                <div style='background-color:green; width:500'> 
+                  140 bpm
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Loudness</td>
+              <td>
+                <div style='background-color:Yellow; width:1000'>
+                  50 Dbs
+                </div>
+              </td>
+            </tr>
+          </table>
+        </article>
+      </section> 
+    </div>
+    <div id = "song_chart">
+
+    </div>
+    <div id = "footer">
+
+    </div>
   </body>
+  <script src="index.js"></script>
 </html>
