--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-radar.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
@@ -73,8 +75,14 @@
         </div>
       </div>
     </div>
+    <div id = "spider_container">
+      
+    </div>
     <div id = "footer">
     </div>
   </body>
-	<script src="index.js"></script>
+	<script src = "song_comparison.js">
+    anyChart.onDocumentReady(function() {
+      });
+  </script>
 </html>
