Fixed some elements including the search bars for artist and song comparison

--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -29,7 +29,7 @@
     <div id = "container">
       <div class="row">
         <div class="column">
-          <input inputmode="text" id="artistInput" onkeyup="myFunction()" placeholder="Search for artists..">
+          <input style = "width: 660px;" inputmode="text" id="artistInput" onkeyup="myFunction()" placeholder="Search for artists..">
           <ul id="artist_search">
             <li><a href="#">Adele</a></li>
             <li><a href="#">Michael Jackson</a></li>
@@ -54,7 +54,7 @@
         </p>
       </div>
         <div class="column">
-          <input inputmode="text" id="artistInput" onkeyup="myFunction()" placeholder="Search for artists..">
+          <input style = "width: 660px;" inputmode="text" id="artistInput" onkeyup="myFunction()" placeholder="Search for artists..">
           <ul id="artist_search">
             <li><a href="#">Adele</a></li>
             <li><a href="#">Michael Jackson</a></li>
