Added Gabes Bio and other pictures in images

--- a/public/developers.html
+++ b/public/developers.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
     <title>Developers</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <div id="navigation-bar"> <!-- Changed the ID name to remove space -->
+</head>
+<body>
+
+<header>
+    <div id="title">
+        <h1 id="Title">Comparify</h1>
+    </div>
+    <div id="navigation-bar">
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="artist.html">Artist</a></li>
-            <li><a href="artists_comparison.html">Artist Comparison</a></li>
-            <li><a href="song.html">Songs</a></li>
-            <li><a href="song_comparison.html">Compare Songs</a></li>
-            <li><a href="developers.html">Developers</a></li>
-            <li><a href="#">User</a></li>
-          </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="artist.html">Artist</a></li>
+                <li><a href="artists_comparison.html">Artist Comparison</a></li>
+                <li><a href="song.html">Songs</a></li>
+                <li><a href="song_comparison.html">Compare Songs</a></li>
+                <li><a href="developers.html">Developers</a></li>
+                <li><a href="#">User</a></li>
+            </ul>
         </nav>
-      </div>
-    </header>
-  <div id="container">
-    <h2>Meet the Developers</h2>
-    <div class="developer">
-      <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
-      <p>Joe's bio goes here...</p>
     </div>
-    <div class="developer">
-      <img src="gabe-image.jpg" alt="Gabe's Image">
-      <p>Gabe's bio goes here...</p>
+</header>
+
+<div id="container">
+    <div id="content">
+        <h2>Meet the Developers</h2>
+        <!-- Developer 1 -->
+        <div class="developer">
+            <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <!-- Developer 2 -->
+        <div class="developer">
+            <img src="gabe-image.jpg" alt="Gabe's Image">
+            <p> Hi! My name is Randolf Gabrielle Uy. I am a computer science major who is interested in backend and server development. Some skills I have include API development, database management / querying, and object oriented programming. Some hobbies I have include playing / watching basketball, building with legos, and listening to music. Please feel free to reach out if you would like to ask any questions!</p>
+        </div>
+        <!-- Developer 3 -->
+        <div class="developer">
+            <img src="/images/simon.jpg" alt="Simon's Image">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <!-- Developer 4 -->
+        <div class="developer">
+            <img src="/images/hillary.jpg" alt="Hilary's Image">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
     </div>
 
-    <div class="developer">
-      <img src="simon-image.jpg" alt="Simon's Image">
-      <p>Simon's bio goes here...</p>
+    <div id="footer">
+        <!-- You can add footer content here -->
     </div>
-
-    <div class="developer ">
-      <img src="hilary-image.jpg" alt="Hilary's Image">
-      <p>Hilary's bio goes here...</p>
-    </div>
-  </div>
-  <div id="footer">
-    <!-- You can add footer content here -->
-  </div>
-</body>
+</div>
 
 <script src="index.js"></script>
-
 </body>
 </html>
